--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrate": "knex-migrate",
     "migrate-latest": "knex-migrate up",
     "migrate-reset": "knex-migrate down 0",
+    "seed": "knex seed:run",
     "up": "knex-migrate up --step"
   },
   "dependencies": {
