--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "knex": "^0.14.4",
     "knex-migrate": "^1.5.4",
     "objection": "^1.1.1",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "urijs": "^1.19.1"
   }
 }
