--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "urijs": "^1.19.1"
   },
   "devDependencies": {
+    "argon2": "^0.19.0",
     "faker": "^4.1.0",
     "knex-migrate": "^1.5.5"
   }
