--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "up": "knex-migrate up --step"
   },
   "dependencies": {
+    "citrus": "file:../citrus",
     "knex": "^0.14.4",
-    "objection": "^1.1.1",
-    "pg": "^7.4.1",
-    "urijs": "^1.19.1"
+    "pg": "^7.4.1"
   },
   "devDependencies": {
     "argon2": "^0.19.0",
